// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`debugging t-debug 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<span>hey</span>\`);
  
  return function template(ctx, node, key = "") {
    debugger;
    let b2;
    if (true) {
      debugger;
      b2 = block2();
    }
    return block1([], [b2]);
  }
}"
`;

exports[`debugging t-debug on sub template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<p>coucou</p>\`);
  
  return function template(ctx, node, key = "") {
    debugger;
    return block1();
  }
}"
`;

exports[`debugging t-debug on sub template 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`debugging t-debug: interaction with t-set 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    debugger;
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
    debugger;
    ctx = Object.create(ctx);
    ctx["bar"] = 49;
    const b2 = safeOutput(ctx['foo']+ctx['bar']);
    return block1([], [b2]);
  }
}"
`;

exports[`debugging t-log 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { withDefault } = helpers;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
    console.log(ctx['foo']+3);
    return block1();
  }
}"
`;

exports[`debugging t-log: interaction with t-set 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    console.log(ctx['foo']);
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
    console.log(ctx['bar']);
    ctx = Object.create(ctx);
    ctx["bar"] = 49;
    const b2 = safeOutput(ctx['foo']+ctx['bar']);
    return block1([], [b2]);
  }
}"
`;
